Switched to UniversalRP
Saw some minor artifacts
- Outline highlighting was broken
- Flower material had shiny artifact
- Squishy ball effect was broken

--- a/SteamVR_Actions.csproj
+++ b/SteamVR_Actions.csproj
@@ -261,6 +261,9 @@
  <Reference Include="Valve.Newtonsoft.Json">
  <HintPath>C:/Projects/- Virtual Reality/steamvr_unity_plugin/Assets/SteamVR/Input/Plugins/JSON.NET/Valve.Newtonsoft.Json.dll</HintPath>
  </Reference>
+ <Reference Include="ICSharpCode.NRefactory">
+ <HintPath>C:/Projects/- Virtual Reality/steamvr_unity_plugin/Library/PackageCache/com.unity.render-pipelines.core@8.2.0/Editor/ShaderGenerator/ICSharpCode.NRefactory.dll</HintPath>
+ </Reference>
  <Reference Include="netstandard">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.0f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
  </Reference>
