--- a/SteamVR_Windows_EditorHelper.csproj
+++ b/SteamVR_Windows_EditorHelper.csproj
@@ -261,6 +261,9 @@
  <Reference Include="Valve.Newtonsoft.Json">
  <HintPath>C:/Projects/- Virtual Reality/steamvr_unity_plugin/Assets/SteamVR/Input/Plugins/JSON.NET/Valve.Newtonsoft.Json.dll</HintPath>
  </Reference>
+ <Reference Include="ICSharpCode.NRefactory">
+ <HintPath>C:/Projects/- Virtual Reality/steamvr_unity_plugin/Library/PackageCache/com.unity.render-pipelines.core@8.2.0/Editor/ShaderGenerator/ICSharpCode.NRefactory.dll</HintPath>
+ </Reference>
  <Reference Include="nunit.framework">
  <HintPath>C:/Projects/- Virtual Reality/steamvr_unity_plugin/Library/PackageCache/com.unity.ext.nunit@1.0.0/net35/unity-custom/nunit.framework.dll</HintPath>
  </Reference>
